auto-apply evolutions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,6 +44,8 @@ db.default.keepAliveConnection = true
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+evolutionplugin=enabled
+applyEvolutions.default=true
 
 # Logger
 # ~~~~~
