migrate to play2.4

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,8 +37,10 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 db.default.driver=org.postgresql.Driver                                                                             
 db.default.url = ${DATABASE_URL}
-db.default.connectionPool = disabled
-db.default.keepAliveConnection = true
+#db.default.connectionPool = disabled
+#db.default.keepAliveConnection = true
+db.default.hikaricp.connectionTestQuery="SELECT 1"
+db.default.hikaricp.maximumPoolSize=100
 
 # Evolutions
 # ~~~~~
